# flutter_rtklib

./: .gitignore  .metadata  CMakeLists.txt  LICENSE  README.md  ffigen_config.yaml  ffigen_rtklib_config.yaml  ffigen_ublox_config.yaml  generated_bindings.dart  pubspec.yaml
android/: .gitignore  build.gradle  settings.gradle
android/rtklib/: CMakeLists.txt
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/dev/igorkili/flutter_rtklib/: FlutterRtklibPlugin.kt
example/: README.md  pubspec.yaml
example/android/: build.gradle
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_rtklib_example/: MainActivity.kt
example/lib/: main.dart
example/lib/src/: app.dart  page_routes.dart
example/lib/src/controllers/: settings_controller.dart  uart_controller.dart  ublox_controller.dart
example/lib/src/pages/: settings_page.dart  uart_connection_page.dart  ublox_page.dart
example/lib/src/settings/: settings_service.dart
example/lib/src/widgets/: app_drawer.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/test/: ublox_controller_test.dart  widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: ffi_extensions.dart  flutter_rtklib.dart  flutter_rtklib_method_channel.dart  flutter_rtklib_platform_interface.dart
lib/c_api/: .clang-format  ffi_ports.cpp  ffi_ports.hpp  ffi_rtklib.h  io.c  io.cpp  rtklib_api.c  rtklib_api.cpp  rtklib_api.h  rtklib_api.hpp  test_size.cpp  trace.c  trace.cpp
lib/c_api/apps/: ffi_convbin.c  ffi_convbin.cpp  ffi_convbin.h  ffi_convbin.hpp  ffi_rtklib.h  ffi_rtkrcv.c  ffi_rtkrcv.cpp  ffi_rtkrcv.h  ffi_rtkrcv.hpp  ffi_rtkrcv_common.cpp
lib/c_api/apps/conf/: rtk.conf  rtk_rinex_vsnk.conf  single.conf
lib/src/: dylib.dart  rtklib_bindings.dart
lib/src/apps/: common.dart  convbin.dart  rtkrcv.dart
lib/src/bindings/: rtklib.dart  windows_overrides.dart
lib/src/rcv/: ublox.dart  ublox_bindings.dart
lib/src/rcv/ublox/: class_ids.dart  u-blox_config_keys.dart  ublox.dart  ubx_decoder.dart
lib/src/ublox_interface/: class_ids.dart  u-blox_config_keys.dart  ubx_decoder.dart
linux/: CMakeLists.txt  flutter_rtklib_plugin.cc
linux/include/flutter_rtklib/: flutter_rtklib_plugin.h
linux/rtklib/: CMakeLists.txt
test/: binding_test.dart  convbin_test.dart  flutter_rtklib_method_channel_test.dart  flutter_rtklib_test.dart  rtkrcv_test.dart  trace_test.dart
test/.out/: GMSD7_20121014.nav  GMSD7_20121014.obs  JAV10150.11O  JAV10150.11P  cres_20080526.nav  cres_20080526.obs  cres_20080526.sbs  javad_20110115.nav  javad_20110115.obs  oemv_200911218.nav  oemv_200911218.obs  oemv_200911218.sbs  rnx3_test.nav  rnx3_test.obs  test13.obs  test14.obs  test15.obs  testglo.nav  testglo.obs  ubx_20080526.txt  ubx_test.nav  ubx_test.obs  ubx_test.sbs
test/data/vsnk_rinex/: 14131060.22g  14131060.22n  14131060.t02  34431060.22g  34431060.22n  34431060.t02
windows/: CMakeLists.txt  flutter_rtklib_plugin.cpp  flutter_rtklib_plugin.h  flutter_rtklib_plugin_c_api.cpp
windows/include/flutter_rtklib/: flutter_rtklib_plugin.h  flutter_rtklib_plugin_c_api.h
windows/rtklib/: CMakeLists.txt
